--- a/.env_example
+++ b/.env_example
@@ -3,4 +3,11 @@ DANGEROUS_SECRET=
 SALTIES=
 MAIL_USERNAME=
 MAIL_PASSWORD=
-RAGTIME_ADMIN=
+APP_ADMIN=
+DATABASE_URL=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=
+S3_REGION=
+S3_BUCKET_PATH=
+
